# Image-Recognition-App-Fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Pipfile  README.md  __main__.py  index.html  pyproject.toml  pytest-report.xml  result.xml  setup.py  vercel.json
.github/workflows/: build_and_deploy.yml  cicd.yml  develop.yml  master.yml  master_front_end.yml  pipeline.yml  python.yml
api/: api.py  aux.py  main.py
api/detect_objects/: detect_objects.py
app/: __init__.py  __main__.py  main.py  settings.py  validations.py
app/ai_model_interfaces/: __init__.py  abstract_model_interface.py  hugging_face_interface.py
app/api/: factory.py
app/auth/: __init__.py  auth.py  exception_handlers.py  exceptions.py  token.py
app/data/: __init__.py  user_manager.py
app/database_connector/: __init__.py  abstract_database_connector.py  firebase.py
app/exceptions/: __init__.py  exception_handlers.py  exceptions.py
app/image_response/: image_response.py
app/model_interfaces/: __init__.py  hugging_face_interface.py
app/model_services/: abstract_model_service.py
app/models/: __init__.py  errors.py  image_data.py  image_response.py  user.py
client/: index.html  script.js  styles.css
gamr_backend_api_service/: __main__.py  settings.py
gamr_backend_api_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gamr_backend_service/: __main__.py
gamr_backend_service.egg-info/: PKG-INFO  requires.txt
server/: main.py  routes.py
tests/: integration-test.ipynb  test_api.py  test_auth.py  test_validation.py
(+39 files in other folders)
